system/template-k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: ${FERRETERIA_UID}-cluster-ip-service
  labels:
    app: ${FERRETERIA_UID}-app
spec:
  type: LoadBalancer
  selector:
    app: ${FERRETERIA_UID}-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${FERRETERIA_UID}-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${FERRETERIA_UID}-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ${FERRETERIA_UID}-app
    spec:
      containers:
        - name: ${FERRETERIA_UID}-app
          image: $DOCKER_USERNAME/backmean:$CI_COMMIT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 250Mi 
            limits:
              cpu: 1
              memory: 1Gi
